<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/backButton"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="3dp"
        android:text="@string/back"
        app:cornerRadius="3dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/Authorisation"
        android:textSize="44sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/black"
        android:hint="@string/Name"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/black"
        android:hint="@string/Email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/black"
        android:hint="@string/Password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_butt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enter" />

    <TextView
        android:id="@+id/toRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotPass"
        android:textColor="#3F51B5" />

</LinearLayout>